# Pressel

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
docs/: BENCHMARKING.md  COMPRESSION-PIPELINE.md  FORMAT.md  RESEARCH.md
examples/: README.md
src/: bench.rs  compare.rs  decode.rs  demo.rs  encode.rs  entropy.rs  format.rs  main.rs  png_chunks.rs  predict.rs  tests.rs  tiles.rs  transform.rs  verify.rs
