[package]
name = "pressel"
version = "0.7.1"
edition = "2024"
authors = ["Petar Stanchev"]
license = "MIT"
description = "Experimental strictly lossless image codec in Rust."
readme = "README.md"
keywords = ["lossless-compression", "image-codec", "research-codec", "predictive-coding"]
categories = ["multimedia::images", "compression", "command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
constriction = "0.4"
crc32fast = "1"
csv = "1"
image = "0.25"
rayon = "1"
sha2 = "0.10"
walkdir = "2"
zstd = "0.13"
